examples/test/testpolicy3094.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3094
  namespace: namespace205
spec:
  podSelector:
    matchLabels:
      key35: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value28
      podSelector:
        matchLabels:
          key26: value10
          key14: value37
          key27: value14
